// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error: Page should render correctly with statusCode 1`] = `
<p>
  An error 400 occurred on server
</p>
`;

exports[`Error: Page should render correctly without statusCode 1`] = `
<p>
  An error occurred on client
</p>
`;
